# liveocean-data-service

./: .gitignore  Dockerfile  Procfile  README.md  cloudmigrate.yaml  compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml
.github/: copilot-instructions.md
geodjango/geodjango/: asgi.py  settings.py  urls.py  wsgi.py
liveocean_data_service/: asgi.py  settings.py  urls.py  wsgi.py
world/: admin.py  models.py  test_views_forecast_drifters.py  test_views_forecast_save_snapshots.py  tests.py  urls.py  views.py
world/fixtures/: one-forecast.json
world/migrations/: 0001_initial.py  0002_liveoceandrifterforecast_drifter.py  0003_rename_drifterdata_liveoceandrifterforecast_drifters_forecast.py  0004_liveoceandrifterforecast_tracks_filename.py  0005_driftersnapshot.py  0006_alter_driftersnapshot_locations.py
